--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Gina Allen, Horrible Cop</title>
-		<link rel="main" type="text/css" href="">
+		<link rel="main" type="text/css" href="main.css">
 	</head>
 	<body>
 		<nav>
