--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Gina Allen, Horrible Cop</title>
+		<title>Gina Allen</title>
 		<link rel="main" type="text/css" href="main.css">
 	</head>
 	<body>
