--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
-		<div class="container">
+		<div class="header">
     		<div class="blurb">
         		<h1>Hi there, I'm Gina Allen!</h1>
 				<p>I'm currently a student from AFSE!/p>
