--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="header">
     		<div class="blurb">
         		<h1>Hi there, I'm Gina Allen!</h1>
-				<p>I'm currently a student from AFSE!/p>
+				<p>I'm currently a student from AFSE!</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
