--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 		<link rel="stylesheet" type="text/css" href="/main.css">
 	</head>
 	<body>
+		<div class="header">
+  	<a href="#default" class="logo">CompanyLogo</a>
+  	<div class="header-right">
+  	  <a class="active" href="#home">Home</a>
+  	  <a href="#contact">Contact</a>
+	<a href="#about">About</a>
+  		</div>
+		</div>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
@@ -13,7 +21,7 @@
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
-		<div class="header">
+		<div class="#1">
     		<div class="blurb">
         		<h1>Hi there, I'm Gina Allen!</h1>
 				<p>I'm currently a student from AFSE!</p>
