--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 	</head>
 	<body>
 		
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
+			<nav>
+		<ul class="menu">
+			<li><a class="active" href="/">Home</a></li>
+        	    	<li><a href="/blog">Blog</a></li>
+        	    	<li><a href="/about">About</a></li>
+        	    	<li><a href="/cv">CV</a></li>
+		</ul>
+	</nav>
 		<div class="#1">
     		<div class="blurb">
         		<h1>Hi there, I'm Gina Allen!</h1>
