--- a/index.html
+++ b/index.html
@@ -1,30 +1,4 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Gina Allen</title>
-		<link rel="stylesheet" type="text/css" href="/main.css">
-	</head>
-	<body>
-		
-			<nav>
-		<ul class="menu">
-			<li><a class="active" href="/">Home</a></li>
-        	    	<li><a href="/blog">Blog</a></li>
-        	    	<li><a href="/about">About</a></li>
-        	    	<li><a href="/cv">CV</a></li>
-		</ul>
-	</nav>
-		<div class="#1">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Gina Allen!</h1>
-				<p>I'm currently a student from AFSE!</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="=">email</a></li>
-        		<li><a href="=</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Gina Allen
+---
