--- a/index.html
+++ b/index.html
@@ -2,3 +2,8 @@
 layout: default
 title: Gina Allen
 ---
+
+<div class="blurb">
+  <h1>Hi there, I'm Gina Allen!</h1>
+  <p>I'm currently a student from AFSE!</p>
+</div><!-- /.blurb -->
